# python-web_hw_08

./: README.md  config.ini  consumer.py  create.py  producer.py  pyproject.toml  search_quotes.py  seeds.py
part_one/: models.py  search_quotes.py  seeds.py
part_two/: consumer.py  consumer_email.py  consumer_sms.py  contacts_models.py  producer.py
